--- a/index.html
+++ b/index.html
@@ -1,12 +1,103 @@
-<!DOCTYPE html>
 <html>
 <head>
-	<title>Hello World</title>
+<meta http-equiv="content-type" content="text/html; charset=utf-8">
+<meta http-equiv="content-language" content="zh-cn">
+<meta content="width=device-width,initial-scale=1,maximum-scale=1" name="viewport">
+<title>转录翻译一体机</title>
+<meta name="description" content="在线将DNA转换为RNA序列，并翻译为多肽">
+<meta name="keywords" content="转录,翻译,DNA,蛋白质,RNA">
+<link rel="stylesheet" type="text/css" href="css/reset.css">
+<script src="https://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
 </head>
-<body>
-	<h1 style="text-align: center;font-size: 5rem">Hello World!<br><a href="https://sblpl.cn">Click me</a></h1>
-	<script type="text/javascript">
-		alert("Hello World!")
-	</script>
+<body style="display:none">
+<div class="bgimg"></div>
+<script type="text/javascript">
+	$("body").fadeIn(800)
+</script>
+<div class="navbar">
+	<header>
+	<h1 class="title transparent"><a href="https://sblpl.cn">转录 & 翻译一体机</a></h1>
+	<a class="subtitle">学习生物必备之良品</a></header>
+</div>
+
+<script type="text/javascript">
+	codonTable = {
+        'AUA': '异亮氨酸', 'AUC': '异亮氨酸', 'AUU': '异亮氨酸', 'AUG': '甲硫氨酸',
+        'ACA': '苏氨酸', 'ACC': '苏氨酸', 'ACG': '苏氨酸', 'ACU': '苏氨酸',
+        'AAC': '天冬酰胺', 'AAU': '天冬酰胺', 'AAA': '赖氨酸', 'AAG': '赖氨酸',
+        'AGC': '丝氨酸', 'AGU': '丝氨酸', 'AGA': '精氨酸', 'AGG': '精氨酸',
+        'CUA': '亮氨酸', 'CUC': '亮氨酸', 'CUG': '亮氨酸', 'CUU': '亮氨酸',
+        'CCA': '脯氨酸', 'CCC': '脯氨酸', 'CCG': '脯氨酸', 'CCU': '脯氨酸',
+        'CAC': '甘氨酸', 'CAU': '甘氨酸', 'CAA': '谷氨酰胺', 'CAG': '谷氨酰胺',
+        'CGA': '精氨酸', 'CGC': '精氨酸', 'CGG': '精氨酸', 'CGU': '精氨酸',
+        'GUA': '缬氨酸', 'GUC': '缬氨酸', 'GUG': '缬氨酸', 'GUU': '缬氨酸',
+        'GCA': '丙氨酸', 'GCC': '丙氨酸', 'GCG': '丙氨酸', 'GCU': '丙氨酸',
+        'GAC': '天冬氨酸', 'GAU': '天冬氨酸', 'GAA': '谷氨酸', 'GAG': '谷氨酸',
+        'GGA': '甘氨酸', 'GGC': '甘氨酸', 'GGG': '甘氨酸', 'GGU': '甘氨酸',
+        'UCA': '丝氨酸', 'UCC': '丝氨酸', 'UCG': '丝氨酸', 'UCU': '丝氨酸',
+        'UUC': '苯丙氨酸', 'UUU': '苯丙氨酸', 'UUA': '亮氨酸', 'UUG': '亮氨酸',
+        'UAC': '酪氨酸', 'UAU': '酪氨酸', 'UAA': '终止', 'UAG': '终止',
+        'UGC': '半胱氨酸', 'UGU': '半胱氨酸', 'UGA': '终止', 'UGG': '色氨酸',
+    }
+
+	function DNAup() {
+		$("#DNA").val($("#DNA").val().toUpperCase().replace(/[^AGCT]/g,''))
+		$("#RNA").val($("#DNA").val().replace(/[A]/g, "U").replace(/[T]/g, "A").replace(/[C]/g, "W").replace(/[G]/g, "C").replace(/[W]/g, "G"))
+		fanyi($("#RNA").val())
+	}
+
+	function RNAup() {
+		$("#RNA").val($("#RNA").val().toUpperCase().replace(/[^AGCU]/g,''))
+		$("#DNA").val($("#RNA").val().replace(/[A]/g, "T").replace(/[U]/g, "A").replace(/[C]/g, "W").replace(/[G]/g, "C").replace(/[W]/g, "G"))
+		fanyi($("#RNA").val())
+	}
+
+	function fanyi(mRNA){
+		var n, m, a;
+		var final = "", final2 = "";
+		for(n = 0;n < mRNA.length;n ++){
+			a = mRNA.slice(n,n + 3)
+			if(a == "AUG" || a == "GUG")	break;
+		    else	final += "<div class='red'>" + mRNA.slice(n, n + 1) + "</div>"
+		}
+		for(;n < mRNA.length - 2;n += 3){
+			a = mRNA.slice(n,n + 3)
+		    final += "<div class='green'>" + a + "<div class='name'>" + codonTable[a] + "</div></div>"
+		    final2 += codonTable[a]
+		    if(codonTable[a] == "终止"){
+		    	n += 3
+		    	break;
+		    }
+		}
+		final += "<div class='red'>" + mRNA.slice(n) + "</div>"
+
+		$("#pr").html(final)
+	}
+</script>
+
+<div class="con transparent">
+	<div class="title">
+		<img src="img/dna.png" alt="DNA"><span>DNA 模板链</span>
+	</div>
+	<div class="input fullwidth">
+		<div class="po">3’</div><input placeholder="请输入.." type="text" id="DNA" onkeyup="DNAup()"><div class="po">5’</div>
+	</div>
+</div>
+<div class="con transparent">
+	<div class="title">
+		<img src="img/rna.png" alt="mRNA"><span>mRNA</span>
+	</div>
+	<div class="input fullwidth">
+		<div class="po">5’</div><input placeholder="请输入.." type="text" id="RNA" onkeyup="RNAup()" style="text-transform:uppercase"><div class="po">3’</div>
+	</div>
+</div>
+<div class="con transparent">
+	<div class="title">
+		<img src="img/duotai.png" alt="多肽链"><span>多肽链</span>
+	</div>
+	<div class="input fullwidth">
+		<div class="po">N</div><div id="pr"></div><div class="po">C</div>
+	</div>
+</div>
 </body>
 </html>
