--- a/index.html
+++ b/index.html
@@ -99,5 +99,6 @@
 		<div class="po">N</div><div id="pr"></div><div class="po">C</div>
 	</div>
 </div>
+<img src="img/mima.jpeg" style="width: 100%">
 </body>
 </html>
