--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <script src="https://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
 </head>
 <body style="display:none">
+<!-- 代码很烂！不建议观看 -->	
 <div class="bgimg"></div>
 <script type="text/javascript">
 	$("body").fadeIn(800)
