--- a/index.html
+++ b/index.html
@@ -3,14 +3,13 @@
 <meta http-equiv="content-type" content="text/html; charset=utf-8">
 <meta http-equiv="content-language" content="zh-cn">
 <meta content="width=device-width,initial-scale=1,maximum-scale=1" name="viewport">
-<title>转录翻译一体机</title>
+<title>转录 & 翻译一体机</title>
 <meta name="description" content="在线将DNA转换为RNA序列，并翻译为多肽">
 <meta name="keywords" content="转录,翻译,DNA,蛋白质,RNA">
 <link rel="stylesheet" type="text/css" href="css/reset.css">
 <script src="https://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
 </head>
 <body style="display:none">
-<!-- 代码很烂！不建议观看 -->	
 <div class="bgimg"></div>
 <script type="text/javascript">
 	$("body").fadeIn(800)
@@ -44,18 +43,20 @@
 	function DNAup() {
 		$("#DNA").val($("#DNA").val().toUpperCase().replace(/[^AGCT]/g,''))
 		$("#RNA").val($("#DNA").val().replace(/[A]/g, "U").replace(/[T]/g, "A").replace(/[C]/g, "W").replace(/[G]/g, "C").replace(/[W]/g, "G"))
+		$("#feiMuban").html($("#DNA").val().replace(/[A]/g, "Y").replace(/[T]/g, "A").replace(/[Y]/g, "T").replace(/[C]/g, "W").replace(/[G]/g, "C").replace(/[W]/g, "G"))
 		fanyi($("#RNA").val())
 	}
 
 	function RNAup() {
 		$("#RNA").val($("#RNA").val().toUpperCase().replace(/[^AGCU]/g,''))
 		$("#DNA").val($("#RNA").val().replace(/[A]/g, "T").replace(/[U]/g, "A").replace(/[C]/g, "W").replace(/[G]/g, "C").replace(/[W]/g, "G"))
+		$("#feiMuban").html($("#DNA").val().replace(/[A]/g, "Y").replace(/[T]/g, "A").replace(/[Y]/g, "T").replace(/[C]/g, "W").replace(/[G]/g, "C").replace(/[W]/g, "G"))
 		fanyi($("#RNA").val())
 	}
 
 	function fanyi(mRNA){
 		var n, m, a;
-		var final = "", final2 = "";
+		var final = "";
 		for(n = 0;n < mRNA.length;n ++){
 			a = mRNA.slice(n,n + 3)
 			if(a == "AUG" || a == "GUG")	break;
@@ -64,12 +65,9 @@
 		for(;n < mRNA.length - 2;n += 3){
 			a = mRNA.slice(n,n + 3)
 		    final += "<div class='green'>" + a + "<div class='name'>" + codonTable[a] + "</div></div>"
-		    final2 += codonTable[a]
-		    if(codonTable[a] == "终止"){
-		    	n += 3
-		    	break;
-		    }
+		    if(codonTable[a] == "终止")	break;
 		}
+		n += 3
 		final += "<div class='red'>" + mRNA.slice(n) + "</div>"
 
 		$("#pr").html(final)
@@ -78,10 +76,11 @@
 
 <div class="con transparent">
 	<div class="title">
-		<img src="img/dna.png" alt="DNA"><span>DNA 模板链</span>
+		<img src="img/dna.png" alt="DNA"><span>DNA</span>
 	</div>
 	<div class="input fullwidth">
-		<div class="po">3’</div><input placeholder="请输入.." type="text" id="DNA" onkeyup="DNAup()"><div class="po">5’</div>
+		<div class="po">3’</div><input placeholder="请输入模板链" type="text" id="DNA" onkeyup="DNAup()"><div class="po">5’</div>
+		<div class="po">5’</div><div class="pr" id="feiMuban"></div><div class="po">3’</div>
 	</div>
 </div>
 <div class="con transparent">
@@ -97,7 +96,7 @@
 		<img src="img/duotai.png" alt="多肽链"><span>多肽链</span>
 	</div>
 	<div class="input fullwidth">
-		<div class="po">N</div><div id="pr"></div><div class="po">C</div>
+		<div class="po">N</div><div class = "pr" id="pr"></div><div class="po">C</div>
 	</div>
 </div>
 <img src="https://cdn.jsdelivr.net/gh/perenliu/perenliu.github.io/img/mima.jpeg" style="width: 100%">
