--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <link rel="stylesheet" type="text/css" href="css/reset.css">
 <script src="https://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
 </head>
+<!-- 代码超级烂！不要看了 -->
 <body style="display:none">
 <div class="bgimg"></div>
 <script type="text/javascript">
@@ -80,7 +81,7 @@
 	</div>
 	<div class="input fullwidth">
 		<div class="po">3’</div><input placeholder="请输入模板链" type="text" id="DNA" onkeyup="DNAup()"><div class="po">5’</div>
-		<div class="po">5’</div><div class="pr" id="feiMuban"></div><div class="po">3’</div>
+		<div class="po">5’</div><div class="pr" id="feiMuban"></div><div class="po" style="vertical-align: bottom;">3’</div>
 	</div>
 </div>
 <div class="con transparent">
@@ -96,7 +97,7 @@
 		<img src="img/duotai.png" alt="多肽链"><span>多肽链</span>
 	</div>
 	<div class="input fullwidth">
-		<div class="po">N</div><div class = "pr" id="pr"></div><div class="po">C</div>
+		<div class="po">N</div><div class = "pr" id="pr"></div><div class="po" style="vertical-align: bottom;">C</div>
 	</div>
 </div>
 <img src="https://cdn.jsdelivr.net/gh/perenliu/perenliu.github.io/img/mima.jpeg" style="width: 100%">
