--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <meta http-equiv="content-type" content="text/html; charset=utf-8">
 <meta http-equiv="content-language" content="zh-cn">
 <meta content="width=device-width,initial-scale=1,maximum-scale=1" name="viewport">
-<title>转录 & 翻译一体机</title>
+<meta name="google-site-verification" content="-SYOrvY5U2Qxu-vhGRXhKUSpn6WaxkzPBm02jljpwqQ" />
+<title>在线转录翻译</title>
 <meta name="description" content="在线将DNA转换为RNA序列，并翻译为多肽">
 <meta name="keywords" content="转录,翻译,DNA,蛋白质,RNA">
 <link rel="stylesheet" type="text/css" href="css/reset.css">
